tests/compile-fail/stacked_borrows/illegal_write6.stderr
error: Undefined Behavior: not granting access to tag <untagged> because incompatible item is protected: [Unique for <1905> (call 611)]
  --> $DIR/illegal_write6.rs:10:14
   |
10 |     unsafe { *y = 2; } //~ ERROR: not granting access to tag
   |              ^^^^^^ not granting access to tag <untagged> because incompatible item is protected: [Unique for <1905> (call 611)]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `foo` at $DIR/illegal_write6.rs:10:14
note: inside `main` at $DIR/illegal_write6.rs:4:5
  --> $DIR/illegal_write6.rs:4:5
   |
4  |     foo(x, p);
   |     ^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

